<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/favMovie"
            android:layout_width="219dp"
            android:layout_height="66dp"
            android:id="@+id/movieButton"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/iceCreamButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toStartOf="@+id/movieViewCount"
            android:layout_marginEnd="24dp" android:onClick="countClick"/>
    <Button
            android:layout_width="219dp"
            android:layout_height="66dp"
            android:id="@+id/iceCreamButton"
            android:text="@string/favIceCream"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toStartOf="@+id/iceCreamViewCount" android:layout_marginEnd="24dp"
            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/colorButton"
            android:onClick="countClick"/>
    <Button
            android:text="@string/favColor"
            android:layout_width="219dp"
            android:layout_height="66dp"
            android:id="@+id/colorButton"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toStartOf="@+id/colorViewCount"
            android:layout_marginEnd="24dp" android:onClick="countClick"/>
    <TextView
            android:layout_width="48dp"
            android:layout_height="66dp"
            android:gravity="center"
            android:id="@+id/movieViewCount"
            android:textAlignment="center"
            android:textSize="36sp" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/iceCreamViewCount" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:text="@string/movieCounter"/>
    <TextView
            android:layout_width="48dp"
            android:layout_height="66dp"
            android:gravity="center"
            android:id="@+id/iceCreamViewCount"
            android:textAlignment="center"
            android:textSize="36sp" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/colorViewCount" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:text="@string/iceCreamCounter"
    />
    <TextView
            android:layout_width="48dp"
            android:layout_height="66dp"
            android:gravity="center"
            android:id="@+id/colorViewCount"
            android:textAlignment="center"
            android:textSize="36sp" android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:text="@string/colorCounter"/>
</androidx.constraintlayout.widget.ConstraintLayout>